--- a/bandgenerator/pom.xml
+++ b/bandgenerator/pom.xml
@@ -11,7 +11,7 @@
 
 	<name>bandgenerator</name>
 	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
+	<url>https://www.sinjava.es</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
