--- a/bandgenerator/pom.xml
+++ b/bandgenerator/pom.xml
@@ -11,7 +11,7 @@
 
 	<name>bandgenerator</name>
 	<!-- FIXME change it to the project's website -->
-	<url>https://www.sinjava.es</url>
+	<url>http://localhost:8080</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -107,6 +107,15 @@
 				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>3.7.1</version>
+					<executions>
+						<execution>
+							<id>attach-descriptor</id>
+							<goals>
+								<goal>attach-descriptor</goal>
+							</goals>
+						</execution>
+					</executions>
+
 				</plugin>
 				<plugin>
 					<artifactId>maven-project-info-reports-plugin</artifactId>
