--- a/pdfserver/src/main/resources/log4j.properties
+++ b/pdfserver/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=FATAL, stdout
 log4j.logger.es.sinjava=DEBUG, stdout
 log4j.additivity.es.sinjava=false
 
