--- a/bandgenerator/pom.xml
+++ b/bandgenerator/pom.xml
@@ -68,6 +68,11 @@
 			<!-- <packaging>bundle</packaging> -->
 		</dependency>
 
+		<dependency>
+			<groupId>es.sinjava</groupId>
+			<artifactId>bandgenerator</artifactId>
+			<version>1.0.0-RC</version>
+		</dependency>
 	</dependencies>
 
 
