--- a/bandgenerator/pom.xml
+++ b/bandgenerator/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>es.sinjava</groupId>
 	<artifactId>bandgenerator</artifactId>
-	<version>1.0.0-RC</version>
+	<version>1.0.1</version>
 
 	<name>bandgenerator</name>
 	<!-- FIXME change it to the project's website -->
