--- a/examples/src/main/resources/log4j.properties
+++ b/examples/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=ERROR, stdout
-log4j.logger.es.sinjava=INFO, stdout
+log4j.logger.es.sinjava=DEBUG, stdout
 log4j.additivity.es.sinjava=false
 
 
