Versión con WAterMark

--- a/examples/src/main/resources/log4j.properties
+++ b/examples/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
 log4j.rootLogger=ERROR, stdout
-log4j.logger.es.sinjava=DEBUG, stdout
+log4j.logger.es.sinjava=ERROR, stdout
 log4j.additivity.es.sinjava=false
+log4j.logger.org.apache.pdfbox =ERROR, stdout
 
 
 # Direct log messages to stdout
@@ -8,5 +9,5 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%-5p | %d{yy-MM-dd HH:mm:ss,sss} | %c{1}:%L | %m%n
-log4j.appender.stdout.layout.ConversionPattern=%-5p | %d{yy-MM-dd HH:mm:ss,sss} | %c:%L | %m%n
-log4j.appender.stdout.layout.ConversionPattern=%-5p | %d{yy-MM-dd HH:mm:ss,sss} | %c | %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%-5p | %d{yy-MM-dd HH:mm:ss,sss} | %c:%L | %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-5p | %d{HH:mm:ss,sss} | %c | %m%n
