--- a/examples/src/main/resources/log4j.properties
+++ b/examples/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=ERROR, stdout
-log4j.logger.es.sinjava=ERROR, stdout
+log4j.logger.es.sinjava=DEBUG, stdout
 log4j.additivity.es.sinjava=false
-log4j.logger.org.apache.pdfbox =ERROR, stdout
+log4j.logger.org.apache.pdfbox =TRACE, stdout
 
 
 # Direct log messages to stdout
